# spdmlite

./: .clang-tidy  LICENSE  meson.build  spdm.conf
bbfile/: spdmlite_git.bb
certapp/: certapp.cpp  meson.build
certs/: ca.pem  ca_key.pem  client_cert.pem  client_key.pem  server_cert.pem  server_key.pem
include/: globaldefs.hpp  measurements.hpp
service/: xyz.openbmc_project.spdmlite.service
src/: certificate_exchange.hpp  spdm_handshake.hpp  spdmdeviceiface.hpp  spdmlite.cpp
